--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,36 @@
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <h1>Calculator</h1>
+    <div class="calculator">
+        <div class="display">Test</div>
+        <div class="buttonGrid">
+            <button class="clear">CLEAR</button>
+            <button class="delete">DELETE</button>
+            <button class="seven">7</button>
+            <button class="eight">8</button>
+            <button class="nine">9</button>
+            <button class="divide">÷</button>
+            <button class="four">4</button>
+            <button class="five">5</button>
+            <button class="six">6</button>
+            <button class="multiply">×</button>
+            <button class="one">1</button>
+            <button class="two">2</button>
+            <button class="three">3</button>
+            <button class="subtract">-</button>
+            <button class="decimal">.</button>
+            <button class="zero">0</button>
+            <button class="equals">=</button>
+            <button class="add">+</button>
+        </div>
+
+
+    </div>
+
 </body>
 <script src="script.js"></script>
+
 </html>
