styled buttons and display into calculator look

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <body>
     <h1>Calculator</h1>
     <div class="calculator">
-        <div class="display">Test</div>
+        <div class="display">321</div>
         <div class="buttonGrid">
-            <button class="clear">CLEAR</button>
-            <button class="delete">DELETE</button>
+            <button class="clear">C</button>
+            <button class="delete">DEL</button>
             <button class="seven">7</button>
             <button class="eight">8</button>
             <button class="nine">9</button>
