added js functions for operations/clear and del functionality

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="display">321</div>
         <div class="buttonGrid">
             <button class="clear">C</button>
-            <button class="delete">DEL</button>
+            <button class="del">DEL</button>
             <button class="seven">7</button>
             <button class="eight">8</button>
             <button class="nine">9</button>
