--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
             <button class="seven" onclick="numClick(7)">7</button>
             <button class="eight" onclick="numClick(8)">8</button>
             <button class="nine" onclick="numClick(9)">9</button>
-            <button class="divide" onclick="signClick('÷')">÷</button>
+            <button class="operator">÷</button>
             <button class="four" onclick="numClick(4)">4</button>
             <button class="five" onclick="numClick(5)">5</button>
             <button class="six" onclick="numClick(6)">6</button>
-            <button class="multiply" onclick="signClick('×')">×</button>
+            <button class="operator">×</button>
             <button class="one" onclick="numClick(1)">1</button>
             <button class="two" onclick="numClick(2)">2</button>
             <button class="three" onclick="numClick(3)">3</button>
-            <button class="subtract" onclick="signClick('-')">-</button>
-            <button class="decimal">.</button>
+            <button class="operator">-</button>
+            <button class="decimal" onclick="numClick('.')">.</button>
             <button class="zero" onclick="numClick(0)">0</button>
-            <button class="equals">=</button>
-            <button class="add" onclick="signClick('+')">+</button>
+            <button class="operator">=</button>
+            <button class="operator">+</button>
         </div>
 
 
