added comments and updated style.css

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <button class="operator">-</button>
             <button class="decimal" onclick="numClick('.')">.</button>
             <button class="zero" onclick="numClick(0)">0</button>
-            <button class="operator">=</button>
+            <button class="operator equals">=</button>
             <button class="operator">+</button>
         </div>
 
